--- a/jnw-overrides.css
+++ b/jnw-overrides.css
@@ -849,3 +849,11 @@ g.text text:nth-of-type(2) tspan {
 .r-stack {
 	align-items: start;
 }
+
+refs {
+	font-size: 50%;
+}
+
+ref {
+	color: silver;
+}
